--- a/Projets_NSI/Flask/PartFinder_Release_1.0/templates/contact.html
+++ b/Projets_NSI/Flask/PartFinder_Release_1.0/templates/contact.html
@@ -50,7 +50,7 @@ About
 
     <div id="icon_contact"> 
         <a href="https://github.com/TMoq22/Projets_lycee_TM/tree/updates"><i class="fa-brands fa-github"></i> Github du projet</a>
-        <a href="https://discord.gg/ceg7zHeX7c"><i class="fa-brands fa-discord"></i> Discord du projet</a>
+        <a href="#"><i class="fa-brands fa-discord"></i> Discord du projet</a>
     </div>
 
     <div class ="warning">
