--- a/Projets_NSI/Flask/PartFinder_Release_1.0/templates/base.html
+++ b/Projets_NSI/Flask/PartFinder_Release_1.0/templates/base.html
@@ -45,7 +45,7 @@
                         <li><a class="active right other" role="button" href="{{ url_for('login') }}" title="compte"><i  class="fa-solid fa-user" {% if session['pseudo'] %} style="color: #2c87c3;" {% endif %} ></i></a></li> <!--style="color: #ffffff;""-->
                         <li><a class="active right other" role="button" href="{{ url_for('contact') }}">ABOUT US</a></li>                            
 
-                        <li><a class="active right other" role="button" href="https://discord.gg/ceg7zHeX7c"><i class="fa-brands fa-discord "></i></a></li>
+                        <li><a class="active right other" role="button" href="#"><i class="fa-brands fa-discord "></i></a></li>
                         <li><a class="active right other" role="button" href="https://github.com/TMoq22/Projets_lycee_TM/tree/updates" title="GitHub"><i class="fa-brands fa-github "></i></a></li>
                     </ul>
                 </nav>
